# weaver

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  CNAME  Cargo.toml  Dockerfile  Jacquard Magic.md  build-workers.sh  deny.toml  docker-compose.yml  flake.nix  grant_proposal.html  lexicon-codegen.sh  lexicons.kdl  test-sidenotes.html  test.html
crates/atpblog-cli/: Cargo.toml
crates/atpblog-cli/src/: main.rs
crates/atpblog-common/: Cargo.toml
crates/atpblog-server/: Cargo.toml
crates/atpblog-server/src/: main.rs
crates/weaver-api/: Cargo.toml
crates/weaver-api/lexicons/: app_bsky_actor_defs.json  app_bsky_actor_getPreferences.json  app_bsky_actor_getProfile.json  app_bsky_actor_getProfiles.json  app_bsky_actor_getSuggestions.json  app_bsky_actor_profile.json  app_bsky_actor_putPreferences.json  app_bsky_actor_searchActors.json  app_bsky_actor_searchActorsTypeahead.json  app_bsky_actor_status.json  app_bsky_ageassurance_begin.json  app_bsky_ageassurance_defs.json  app_bsky_ageassurance_getConfig.json  app_bsky_ageassurance_getState.json  app_bsky_bookmark_createBookmark.json  app_bsky_bookmark_defs.json  app_bsky_bookmark_deleteBookmark.json  app_bsky_bookmark_getBookmarks.json  app_bsky_embed_defs.json  app_bsky_embed_external.json  app_bsky_embed_images.json  app_bsky_embed_record.json  app_bsky_embed_recordWithMedia.json  app_bsky_embed_video.json  app_bsky_feed_defs.json  app_bsky_feed_describeFeedGenerator.json  app_bsky_feed_generator.json  app_bsky_feed_getActorFeeds.json  app_bsky_feed_getActorLikes.json  app_bsky_feed_getAuthorFeed.json  app_bsky_feed_getFeed.json  app_bsky_feed_getFeedGenerator.json  app_bsky_feed_getFeedGenerators.json  app_bsky_feed_getFeedSkeleton.json  app_bsky_feed_getLikes.json  app_bsky_feed_getListFeed.json  app_bsky_feed_getPostThread.json  app_bsky_feed_getPosts.json  app_bsky_feed_getQuotes.json  app_bsky_feed_getRepostedBy.json  (+415 more)
crates/weaver-api/src/: app_bsky.rs  blog_pckt.rs  chat_bsky.rs  com_atproto.rs  com_deckbelcher.rs  com_whtwnd.rs  lib.rs  pub_leaflet.rs  sh_weaver.rs  site_standard.rs  tools_ozone.rs
crates/weaver-api/src/app_bsky/: actor.rs  ageassurance.rs  bookmark.rs  embed.rs  feed.rs  graph.rs  labeler.rs  notification.rs  unspecced.rs  video.rs
crates/weaver-api/src/blog_pckt/: block.rs  blog.rs  document.rs  mark.rs  post.rs  publication.rs  richtext.rs  theme.rs
crates/weaver-api/src/chat_bsky/: actor.rs  convo.rs  moderation.rs
crates/weaver-api/src/com_atproto/: admin.rs  identity.rs  label.rs  lexicon.rs  moderation.rs  repo.rs  server.rs  sync.rs  temp.rs
crates/weaver-api/src/com_deckbelcher/: actor.rs  deck.rs  social.rs
crates/weaver-api/src/com_whtwnd/: blog.rs
crates/weaver-api/src/pub_leaflet/: blocks.rs  comment.rs  document.rs  graph.rs  pages.rs  poll.rs  publication.rs  theme.rs
crates/weaver-api/src/sh_weaver/: actor.rs  collab.rs  edit.rs  embed.rs  graph.rs  notebook.rs  notification.rs  publish.rs
crates/weaver-api/src/site_standard/: document.rs  publication.rs  theme.rs
crates/weaver-api/src/tools_ozone/: communication.rs  hosting.rs  moderation.rs  report.rs  safelink.rs  server.rs  set.rs  setting.rs  signature.rs  (+2 more)
crates/weaver-app/: .env-dev  .env-pro  .env-prod  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  build.rs  diesel.toml
crates/weaver-app-server/: Cargo.toml
crates/weaver-app-server/src/: config.rs  main.rs
crates/weaver-app/assets/: about.md  privacy.md  sw.js  terms.md
crates/weaver-app/public/: editor_worker.js  embed_worker.js  sw.js
crates/weaver-app/src/: blobcache.rs  cache_impl.rs  collab_context.rs  config.rs  data.rs  env.rs  fetch.rs  host_mode.rs  lib.rs  main.rs  perf.rs  record_utils.rs  service_worker.rs  subdomain_app.rs
crates/weaver-appview/: Cargo.toml  diesel.toml
crates/weaver-appview/src/: api_error.rs  db.rs  main.rs  models.rs  oauth.rs  schema.rs  state.rs  telemetry.rs
crates/weaver-cli/: Cargo.toml
crates/weaver-cli/src/: main.rs
crates/weaver-common/: Cargo.toml
crates/weaver-common/src/: agent.rs  cache.rs  client.rs  compat.rs  config.rs  constellation.rs  error.rs  filestore.rs  lib.rs  oauth.rs  perf.rs  resolve.rs  resolver.rs  telemetry.rs  view.rs  xrpc_server.rs
crates/weaver-editor-browser/: Cargo.toml
crates/weaver-editor-browser/src/: clipboard.rs  color.rs  cursor.rs  dom_sync.rs  events.rs  lib.rs  platform.rs  visibility.rs
crates/weaver-editor-browser/tests/: web.rs
crates/weaver-editor-core/: Cargo.toml
crates/weaver-editor-core/src/: actions.rs  document.rs  execute.rs  lib.rs  offset_map.rs  paragraph.rs  platform.rs  render.rs  render_cache.rs  syntax.rs  text.rs  text_helpers.rs  types.rs  undo.rs  visibility.rs
crates/weaver-editor-crdt/: Cargo.toml
crates/weaver-editor-crdt/src/: buffer.rs  coordinator.rs  document.rs  error.rs  lib.rs  sync.rs
crates/weaver-editor-js/: .gitignore  Cargo.toml  build.sh
crates/weaver-editor-js/src/: actions.rs  collab.rs  editor.rs  events.rs  lib.rs  types.rs
crates/weaver-editor-js/ts/: bundler  collab.ts  index.ts  package-lock.json  package.json  tsconfig.json  types.ts  wasm.d.ts  weaver-editor.css
crates/weaver-embed-worker/: Cargo.toml
crates/weaver-embed-worker/src/: host.rs  lib.rs
crates/weaver-index/: Cargo.toml  Dockerfile  package-lock.json  package.json
crates/weaver-index/src/: clickhouse.rs  config.rs  db.rs  error.rs  firehose.rs  indexer.rs  landing.html  lib.rs  main.rs  models.rs  oauth.rs  parallel_tap.rs  schema.patch  schema.rs  server.rs  service_identity.rs  sqlite.rs  tap.rs
crates/weaver-markdown/: Cargo.toml
crates/weaver-renderer/: Cargo.toml
crates/weaver-renderer-js/: .gitignore  Cargo.toml  build.sh
crates/weaver-renderer-js/src/: lib.rs  types.rs
crates/weaver-renderer/src/: atproto.rs  base_html.rs  code_pretty.rs  css.rs  lib.rs  math.rs  static_site.rs  theme.rs  types.rs  utils.rs  walker.rs
crates/weaver-renderer/tests/: atproto_integration.rs
crates/weaver-server/: Cargo.toml  Dioxus.toml
crates/weaver-server/src/: blobcache.rs  fetch.rs  main.rs
(+1034 files in other folders)
