[workspace]
resolver = "2"
# Note that we define member crates with a wildcard here and NOT with explicit
# paths because the flake.nix is written in a way such that top-level members
# (`atpblog-cli` and `atpblog-server`) are built as different derivations which avoid being
# rebuilt if the other package's sources change.
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
authors = ["orual"]

[workspace.metadata.crane]
name = "atpblog-workspace"


[workspace.dependencies]

serde = { version = "1.0", features = ["derive"] }
merde = { version = "10.0.6", features = ["full"] }
facet = { version = "0.9.6", features = ["camino"] }

minijinja = { version = "2.9.0", default-features = false }
minijinja-contrib = { version = "2.9.0", default-features = false }
miette = { version = "7.5.0" }
owo-colors = { version = "4.2.0" }
thiserror = "2.0"
syntect = "5.2.0"
jane-eyre = "0.6.12"
n0-future = "=0.1.2"
tracing = { version = "0.1.41", default-features = false, features = ["std"] }
