[workspace]
resolver = "2"
# Note that we define member crates with a wildcard here and NOT with explicit
# paths because the flake.nix is written in a way such that top-level members
# (`weaver-cli` and `weaver-server`) are built as different derivations which avoid being
# rebuilt if the other package's sources change.
members = ["crates/*"]

#default-members = ["crates/weaver-cli"]


[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
authors = ["orual"]


[workspace.metadata.crane]
name = "weaver-workspace"


[workspace.dependencies]

serde = { version = "1.0", features = ["derive"] }
bytes = "1.10"
minijinja = { version = "2.9.0", default-features = false }
minijinja-contrib = { version = "2.9.0", default-features = false }
miette = { version = "7.6" }
owo-colors = { version = "4.2.0" }
thiserror = "2.0"
syntect = { version = "5.2.0", default-features = false }
jane-eyre = "0.6.12"
n0-future = "=0.1.3"
tracing = { version = "0.1.41", default-features = false, features = ["std"] }
lexicon_cid = { package = "cid", version = "0.10.1", features = [
  "serde-codec",
] }
markdown-weaver = { git = "https://github.com/rsform/markdown-weaver" }
markdown-weaver-escape = { git = "https://github.com/rsform/markdown-weaver" }

jacquard = { git = "https://tangled.org/@nonbinary.computer/jacquard", default-features = false, features = ["derive", "api_bluesky", "dns"] }
jacquard-api = { git = "https://tangled.org/@nonbinary.computer/jacquard" }
jacquard-axum = { git = "https://tangled.org/@nonbinary.computer/jacquard" }
