[workspace]
resolver = "2"
# Note that we define member crates with a wildcard here and NOT with explicit
# paths because the flake.nix is written in a way such that top-level members
# (`weaver-cli` and `weaver-server`) are built as different derivations which avoid being
# rebuilt if the other package's sources change.
members = ["crates/*"]

#default-members = ["crates/weaver-cli"]


[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
authors = ["orual"]


[workspace.metadata.crane]
name = "weaver-workspace"


[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
bytes = "1.10"
miette = { version = "7.6" }
thiserror = "2.0"
syntect = { version = "5.2.0", default-features = false }
n0-future = "=0.1.3"
tracing = { version = "0.1.41", default-features = false, features = ["std"] }
markdown-weaver = { git = "https://github.com/rsform/markdown-weaver" }
markdown-weaver-escape = { git = "https://github.com/rsform/markdown-weaver" }
# markdown-weaver = { path = "../markdown-weaver/markdown-weaver" }
# markdown-weaver-escape = { path = "../markdown-weaver/markdown-weaver-escape" }

jacquard = { git = "https://tangled.org/@nonbinary.computer/jacquard", default-features = false, features = ["derive", "api_bluesky", "tracing"] }
jacquard-identity = { git = "https://tangled.org/@nonbinary.computer/jacquard", features = ["cache"] }
jacquard-common = { git = "https://tangled.org/@nonbinary.computer/jacquard" }
jacquard-axum = { git = "https://tangled.org/@nonbinary.computer/jacquard" }
jacquard-derive = { git = "https://tangled.org/@nonbinary.computer/jacquard" }
jacquard-lexicon = { git = "https://tangled.org/@nonbinary.computer/jacquard", default-features = false }
jacquard-repo = { git = "https://tangled.org/@nonbinary.computer/jacquard" }

# jacquard = { path = "../jacquard/crates/jacquard", default-features = false, features = ["derive", "api_bluesky", "tracing", "cache"] }
# jacquard-identity = { path = "../jacquard/crates/jacquard-identity", features = ["cache"] }
# jacquard-api = { path = "../jacquard/crates/jacquard-api" }
# jacquard-common = { path = "../jacquard/crates/jacquard-common" }
# jacquard-axum = {path = "../jacquard/crates/jacquard-axum" }
# jacquard-derive = { path = "../jacquard/crates/jacquard-derive" }
# jacquard-lexicon = { path = "../jacquard/crates/jacquard-lexicon", default-features = false }
# jacquard-repo = { path = "../jacquard/crates/jacquard-repo" }

# jacquard = { path = "../jacquard-facet/crates/jacquard", default-features = false, features = ["derive", "api_bluesky", "tracing", "serde"] }
# jacquard-identity = { path = "../jacquard-facet/crates/jacquard-identity", features = ["cache"] }
# jacquard-api = { path = "../jacquard-facet/crates/jacquard-api" }
# jacquard-common = { path = "../jacquard-facet/crates/jacquard-common" }
# jacquard-axum = {path = "../jacquard-facet/crates/jacquard-axum" }
# jacquard-derive = { path = "../jacquard-facet/crates/jacquard-derive" }
# jacquard-lexicon = { path = "../jacquard-facet/crates/jacquard-lexicon", default-features = false }
#

# [patch.crates-io]
# #secp256k1-zkp = { git = "https://github.com/dpc/rust-secp256k1-zkp/", branch = "sanket-pr" }
# ring = { git = "https://github.com/dpc/ring", rev = "5493e7e76d0d8fb1d3cbb0be9c4944700741b802" }


[profile]

[profile.wasm-release]
inherits = "release"
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
incremental = false
strip = "symbols"


[profile.wasm-dev]
inherits = "dev"
debug = true

[profile.server-dev]
inherits = "dev"
debug = true


[profile.server-release]
inherits = "release"
opt-level = 2

[profile.android-dev]
inherits = "dev"
