[package]
name = "atpblog-server"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
atpblog-common = { path = "../atpblog-common" }
atpblog-workspace-hack = { version = "0.1", path = "../atpblog-workspace-hack" }
axum = "0.7.5"
tokio = { version = "1.43", features = ["full"] }
