[package]
name = "weaver-api"
description = "Generated AT Protocol API bindings for Weaver"
edition.workspace = true
version = "0.1.0"
authors.workspace = true

[dependencies]
bytes = { workspace = true }
jacquard-common = { workspace = true }
jacquard-derive = { workspace = true }
jacquard-lexicon = { workspace = true }
miette.workspace = true
rustversion = "1.0"
serde.workspace = true
serde_ipld_dagcbor = { version = "0.6", optional = true }
thiserror.workspace = true
unicode-segmentation = "1.12"
serde_bytes = "0.11"

[lints.rust]
# just so that my rust-analyzer shuts up about the module name for 2048.blue's namespace
non_snake_case = "allow"

[features]
default = ["sh_weaver", "com_atproto",  "serde"]
streaming = ["jacquard-common/websocket"]
serde = ["bytes/serde", "dep:serde_ipld_dagcbor"]


# --- generated ---
# Generated namespace features
app_bsky = []
chat_bsky = []
com_atproto = []
sh_weaver = ["app_bsky"]
tools_ozone = ["chat_bsky", "com_atproto"]
