[package]
name = "weaver-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
default = []
embedded-db = ["diesel/sqlite", "diesel-async/sync-connection-wrapper"]

[dependencies]
weaver-common = { path = "../weaver-common", default-features = false }
clap = { version = "4.5", features = ["derive", "env", "cargo", "unicode"] }
dotenvy = "0.15"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
tracing-appender = { version = "0.2.3", features = ["parking_lot"] }

chrono = "0.4.41"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.8.0", features = ["v7", "serde"] }

jacquard = { workspace = true, features = ["websocket", "zstd"] }
jacquard-api = { workspace = true, features = ["sh_weaver"] }
jacquard-axum = { workspace = true }

axum = "0.8"
hyper = "1.4.1"
tower = { version = "0.5", features = [] }
tower-cookies = "0.11"
tower-http = { version = "0.6", features = [
"fs",
    "trace",
    "timeout",
    "request-id",
    "cors",
    "normalize-path",
] }

reqwest = { version = "0.12.7", default-features = false, features = [
    "json",
    "rustls-tls",
] }

tokio = { version = "1.44", features = ["full"] }

miette = { workspace = true, features = ["fancy", "syntect-highlighter"] }
thiserror = { workspace = true }

diesel =  { version = "2.2.0", features = ["postgres", "serde_json","chrono"] }
diesel-async = { version = "0.5.2", features = ["postgres", "deadpool"] }
diesel_migrations = "2.2.0"

toml = { version = "0.8.22", features = ["preserve_order"] }
jose = { version = "0.0.2", features = ["crypto-rustcrypto"] }
jose-jwk = "0.1.2"
url = "2"

minijinja = { version = "2.9.0" }
minijinja-contrib = { version = "2.9.0" }
dashmap = "6.1.0"
