[package]
name = "weaver-app"
version = "0.1.0"
authors = ["Orual <orual@nonbinary.computer>"]
edition = "2021"

[features]
default = ["web", "fullstack-server", "no-app-index"]
# Fullstack mode with SSR and server functions
fullstack-server = ["dioxus/fullstack"]
no-app-index = []

web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [ "dioxus/server", "dep:jacquard-axum", "dep:axum"]




[dependencies]
dashmap = "6.1.0"

dioxus = { version = "0.7.1", features = ["router"] }
#dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
weaver-common = { path = "../weaver-common" }
jacquard = { workspace = true, features = ["streaming"] }
jacquard-axum = { workspace = true, optional = true }
weaver-api = { path = "../weaver-api", features = ["streaming"] }
markdown-weaver = { workspace = true }
weaver-renderer = { path = "../weaver-renderer" }
mini-moka = { git = "https://github.com/moka-rs/mini-moka", rev = "da864e849f5d034f32e02197fee9bb5d5af36d3d" }
n0-future = { workspace = true }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
axum = {version = "0.8.6", optional = true}
mime-sniffer = {version = "^0.1"}
chrono = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

diesel = { version = "2.3",  features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono", "serde_json"] }
diesel_migrations = { version = "2.3", features = ["sqlite"] }


[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
sqlite-wasm-rs = { version = "0.4", default-features = false, features = ["precompiled", "relaxed-idb"] }
time = { version = "0.3", features = ["wasm-bindgen"] }
console_error_panic_hook = "0.1"
mini-moka = { git = "https://github.com/moka-rs/mini-moka", rev = "da864e849f5d034f32e02197fee9bb5d5af36d3d", features = ["js"] }
chrono = { version = "0.4", features = ["wasmbind"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["ServiceWorkerContainer", "ServiceWorker", "ServiceWorkerRegistration", "RegistrationOptions", "Window", "Navigator", "MessageEvent", "console"] }
js-sys = "0.3"
