[package]
name = "weaver-app"
version = "0.1.0"
authors = ["Orual <orual@nonbinary.computer>"]
edition = "2024"

[features]
default = ["web", "fullstack-server", "no-app-index"]
# Fullstack mode with SSR and server functions
fullstack-server = ["dioxus/fullstack"]
wasm-split = ["dioxus/wasm-split"]
no-app-index = []

web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [ "dioxus/server", "dep:jacquard-axum", "dep:axum"]


[dependencies]
dashmap = "6.1.0"

dioxus = { version = "0.7.1", features = ["router"] }
weaver-common = { path = "../weaver-common" }
jacquard = { workspace = true}#, features = ["streaming"] }
jacquard-lexicon = { workspace = true }
jacquard-identity = { workspace = true }
jacquard-axum = { workspace = true, optional = true }
weaver-api = { path = "../weaver-api"}#, features = ["streaming"] }
markdown-weaver = { workspace = true }
weaver-renderer = { path = "../weaver-renderer" }
mini-moka = { git = "https://github.com/moka-rs/mini-moka", rev = "da864e849f5d034f32e02197fee9bb5d5af36d3d" }
n0-future = { workspace = true }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false, features = ["router"] }
axum = {version = "0.8.6", optional = true}
mime-sniffer = {version = "^0.1"}
chrono = { version = "0.4" }
serde = { version = "1.0" }
serde_json = "1.0"
humansize = "2.0.0"
base64 = "0.22"
http = "1.3"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
dioxus-free-icons = { version = "0.9", features = ["font-awesome-brands"] }
syntect = { workspace = true, default-features = false, features = ["default-fancy"]}
# diesel = { version = "2.3",  features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono", "serde_json"] }
# diesel_migrations = { version = "2.3", features = ["sqlite"] }
tokio = { version = "1.28", features = ["sync"] }
serde_html_form = "0.2.8"
tracing.workspace = true
serde_ipld_dagcbor = { version = "0.6" }
loro = "1.9.1"
markdown-weaver-escape = { workspace = true }
web-time = "1.1"

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
webbrowser = "1.0.6"
reqwest = { version = "0.12", default-features = false, features = ["json"] }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
#sqlite-wasm-rs = { version = "0.4", default-features = false, features = ["precompiled", "relaxed-idb"] }
time = { version = "0.3", features = ["wasm-bindgen"] }
console_error_panic_hook = "0.1"
mini-moka = { git = "https://github.com/moka-rs/mini-moka", rev = "da864e849f5d034f32e02197fee9bb5d5af36d3d", features = ["js"] }
chrono = { version = "0.4", features = ["wasmbind"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["ServiceWorkerContainer", "ServiceWorker", "ServiceWorkerRegistration", "RegistrationOptions", "Window", "Navigator", "MessageEvent", "console", "Document", "Element", "HtmlImageElement", "Selection", "Range", "Node", "HtmlElement", "TreeWalker", "NodeFilter", "DomTokenList", "Clipboard", "ClipboardItem", "Blob", "BlobPropertyBag", "EventTarget", "InputEvent", "AddEventListenerOptions"] }
js-sys = "0.3"
gloo-storage = "0.3"
gloo-timers = "0.3"
lol_alloc = "0.4.1"

[build-dependencies]
dotenvy = "0.15.7"

[dev-dependencies]
insta = { version = "1.40", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1"
