[package]
name = "weaver-appview"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
weaver-common = { path = "../weaver-common" }
weaver-workspace-hack = { version = "0.1", path = "../weaver-workspace-hack" }
clap = { version = "4.5", features = ["derive", "env", "cargo", "unicode"] }

axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tower-cookies = "0.11"


tokio = { version = "1.44", features = ["full"] }
atrium-oauth = "0.1.1"
atrium-xrpc = "0.12.3"
atrium-api =  "0.25.3"
atrium-common = "0.1.1"
atrium-identity = "0.1.3"


diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
# libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15"
