[package]
name = "weaver-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "weaver"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "cargo", "unicode"] }
weaver-common = { path = "../weaver-common", features = ["native"] }
weaver-renderer = { path = "../weaver-renderer" }
weaver-workspace-hack = { version = "0.1", path = "../weaver-workspace-hack" }
miette = { workspace = true, features = ["fancy"] }

jacquard = { workspace = true, features = ["loopback"] }
jacquard-api = { workspace = true, features = ["sh_weaver"] }

tokio = { version = "1.45.0", features = ["full"] }
dirs = "6.0.0"
kdl = "4.6"
