[package]
name = "weaver-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "weaver"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "cargo", "unicode"] }
weaver-common = { path = "../weaver-common", features = ["native"] }
weaver-renderer = { path = "../weaver-renderer" }
weaver-api = { path = "../weaver-api" }
miette = { workspace = true, features = ["fancy"] }

jacquard = { workspace = true, features = ["loopback", "dns"] }

markdown-weaver = { workspace = true }
markdown-weaver-escape = { workspace = true }
n0-future = { workspace = true }

tokio = { version = "1.45.0", features = ["full"] }
dirs = "6.0.0"
kdl = "4.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
