[package]
name = "weaver-editor-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ropey = "1.6"
smol_str = "0.3"
thiserror = { workspace = true }
tracing = { workspace = true }
web-time = "1.1"
markdown-weaver = { workspace = true }
markdown-weaver-escape = { workspace = true }
weaver-common = { path = "../weaver-common" }
# Only needs syntax-highlighting, not CSS generation
weaver-renderer = { path = "../weaver-renderer", default-features = false, features = ["syntax-highlighting"] }
weaver-api = { path = "../weaver-api" }
jacquard = { workspace = true }

# Native: syntect with onig
[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
syntect = { workspace = true, default-features = false, features = [
    "parsing",
    "html",
    "default-syntaxes",
    "regex-onig"
] }

# WASM: syntect with fancy-regex
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
syntect = { workspace = true, default-features = false, features = [
    "parsing",
    "html",
    "default-syntaxes",
    "regex-fancy"
] }

[dev-dependencies]
