[package]
name = "weaver-editor-js"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository = "https://tangled.org/nonbinary.computer/weaver"
description = "WASM bindings for the weaver markdown editor"

[lib]
crate-type = ["cdylib"]

[features]
default = []
collab = ["weaver-editor-crdt"]

[dependencies]
weaver-editor-core = { path = "../weaver-editor-core" }
weaver-editor-browser = { path = "../weaver-editor-browser" }
weaver-editor-crdt = { path = "../weaver-editor-crdt", optional = true }
weaver-embed-worker = { path = "../weaver-embed-worker" }
weaver-api = { path = "../weaver-api" }
weaver-common = { path = "../weaver-common" }

wasm-bindgen = "0.2"
serde = { workspace = true }
serde_bytes = "0.11"
serde-wasm-bindgen = "0.6"
tsify-next = "0.5"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlDivElement",
    "Node",
    "Window",
    "Selection",
    "Range",
    "InputEvent",
    "KeyboardEvent",
    "ClipboardEvent",
    "CompositionEvent",
    "DataTransfer",
    "EventTarget",
]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz', '--enable-bulk-memory-opt', '--enable-nontrapping-float-to-int']
