[package]
name = "weaver-embed-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Web worker for fetching and caching AT Protocol embeds"

[features]
default = []
use-index = []

[dependencies]
weaver-common = { path = "../weaver-common", features = ["cache", "perf"] }
weaver-renderer = { path = "../weaver-renderer" }
jacquard = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
gloo-worker = "0.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

[[bin]]
name = "embed_worker"
path = "src/bin/embed_worker.rs"
