[package]
name = "weaver-index"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
default = []
embedded-db = ["diesel/sqlite", "diesel-async/sync-connection-wrapper"]

[dependencies]
weaver-common = { path = "../weaver-common", default-features = false }
clap = { version = "4.5", features = ["derive", "env", "cargo", "unicode"] }
dotenvy = "0.15"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
tracing-appender = { version = "0.2.3", features = ["parking_lot"] }

chrono = "0.4.41"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.8.0", features = ["v7", "serde"] }

jacquard = { workspace = true, features = ["websocket", "zstd"] }
jacquard-api = { workspace = true, features = ["sh_weaver"] }
jacquard-axum = { workspace = true }

axum = "0.8"
hyper = "1.4.1"
tower = { version = "0.5", features = [] }
tower-cookies = "0.11"
tower-http = { version = "0.6", features = [
"fs",
    "trace",
    "timeout",
    "request-id",
    "cors",
    "normalize-path",
] }

reqwest = { version = "0.12.7", default-features = false, features = [
    "json",
    "rustls-tls",
] }

tokio = { version = "1.44", features = ["full"] }

miette = { workspace = true, features = ["fancy", "syntect-highlighter"] }
thiserror = { workspace = true }

diesel =  { version = "2.3.0", features = ["sqlite", "serde_json", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel-async = { version = "0.7", features = ["sqlite", "deadpool"] }
diesel_migrations = "2.3.0"

libsqlite3-sys = {version = ">=0.30.1,<0.36.0", features = ["bundled"] }

toml = { version = "0.8.22", features = ["preserve_order"] }
jose = { version = "0.0.2", features = ["crypto-rustcrypto"] }
jose-jwk = "0.1.2"
url = "2"

minijinja = { version = "2.9.0" }
minijinja-contrib = { version = "2.9.0" }
dashmap = "6.1.0"


# wasm-in-browser dependencies
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
futures-util = "0.3"
js-sys = "0.3"
pin-project = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-time = "1"
send_wrapper = "0.6"
wasmworker = "0.1"
wasmworker-proc-macro = "0.1"
