[package]
name = "weaver-markdown"
description = "Custom Markdown parser, built on top of markdown-rs"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
serde_debug = ["markdown/json"]


[dependencies]
markdown = { version = "1.0", features = ["log"] }
miette = { workspace = true, features = ["fancy", "syntect-highlighter"] }
owo-colors = { workspace = true, features = ["alloc"] }
syntect.workspace = true
thiserror.workspace = true
weaver-workspace-hack = { version = "0.1", path = "../weaver-workspace-hack" }
